maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: not found: value testg
	while (!testg()) {
                ^