maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

	def keepHandOnSideWall() = { 
	while (!testg()) {
		gauche()
		avance()
		
	}
}

 do { keepHandOnSideWall()
 }
  while (!estSurBiscuit())
prendBiscuit()

}
